--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "new_quoc",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@mdi/font": "^5.9.55",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "turbolinks": "^5.2.0"
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-router": "^3.5.1",
+    "vue-template-compiler": "^2.6.12",
+    "vuetify": "^2.4.9",
+    "vuex": "^3.6.2"
   },
   "version": "0.1.0",
   "devDependencies": {
