--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "^10.1.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.12",
     "vuetify": "^2.4.9",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "sass": "^1.32.8",
+    "node-sass": "^5.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
